link new script in index.html

--- a/type/index.html
+++ b/type/index.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'/>
     <title>HTML Code Typing Practice | Africa Code Week</title>
     <!-- <meta http-equiv="pragma" content="no-cache" /> -->
-    <link rel="stylesheet" href="static/CACHE/css/b0494cd02a79.css" type="text/css" />
+    <link rel="stylesheet" href="static/cache/css/b0494cd02a79.css" type="text/css" />
 
     <!--need to include full font-awesome package-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -26,7 +26,7 @@
 <body>
 
 <header>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-light">
   <div class="container">
     <div class="navbar-header">
       
@@ -68,14 +68,14 @@
 
       
 
-    <a onclick="window.location.assign(window.location.href)" type="button" style="" class="btn btn-default visible-lg visible-md"><i class="fa fa-refresh" aria-hidden="true"></i> Reload</a>
+    <a onclick="window.location.assign(window.location.href)" type="button" style="" class="btn btn-danger visible-lg visible-md"><i class="fa fa-refresh" aria-hidden="true"></i> Reload</a>
 <br>
     <!-- <a onclick="var keyb = document.getElementById('keyboard'); keyb.className += ' invisible'; var hands = document.getElementById('humanhands'); hands.className += ' invisible'; document.getElementById('main').style['height'] = '500px';" type="button" style="" class="btn btn-default visible-lg visible-md"><i class="fa fa-refresh" aria-hidden="true"></i> Hide</a>
     <a onclick="var keyb = document.getElementById('keyboard'); keyb.className -= ' invisible'; var hands = document.getElementById('humanhands'); hands.className -= ' invisible'; document.getElementById('main').style['height'] = '200px';" type="button" style="" class="btn btn-default visible-lg visible-md"><i class="fa fa-refresh" aria-hidden="true"></i> UNHide</a> -->
 
     <!-- <a onclick="hide_keyboard()" type="button" style="" id="togglehide" class="btn btn-default visible-lg visible-md"><i class="fa fa-refresh" aria-hidden="true"></i> Hide</a> -->
 
-    <a onclick="hide_keyboard_cookie()" type="button" style="" id="togglehide1" class="btn btn-default visible-lg visible-md"><i class="fa fa-keyboard-o" aria-hidden="true"></i> Hide Keyboard</a>
+    <a onclick="hide_keyboard_cookie()" type="button" style="" id="togglehide1" class="btn btn-primary visible-lg visible-md"><i class="fa fa-keyboard-o" aria-hidden="true"></i> Hide Keyboard</a>
     </div>
 
 
@@ -95,14 +95,16 @@
       &lt;meta name=&quot;author&quot; content=&quot;&quot;&gt;
       &lt;link rel=&quot;icon&quot; href=&quot;../../favicon.ico&quot;&gt;
 
-      &lt;title&gt;Blog Template for Bootstrap&lt;/title&gt;
+      &lt;title&gt;My First HTMl Website&lt;/title&gt;
 
-      &lt;link href=&quot;../../dist/css/bootstrap.min.css&quot; rel=&quot;stylesheet&quot;&gt;
+      &lt;link href=&quot;../dist/css/bootstrap.min.css&quot; rel=&quot;stylesheet&quot;&gt;
 
-      &lt;link href=&quot;blog.css&quot; rel=&quot;stylesheet&quot;&gt;
+      &lt;link href=&quot;style.css&quot; rel=&quot;stylesheet&quot;&gt;
       &lt;/head&gt;
     </pre>
   </div>
+
+  <!-- ================================= END SECTION FOR CODE PRACTICE ================================== -->
 
 
 
@@ -269,12 +271,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="static/js/jquery-2.1.0.min.js"></script> <!-- jquery must be loaded first -->
 <script src="static/js/bootstrap.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="static/CACHE/js/8c414e21a07e.js"></script>
-<!--if condition for home-->
-<script type="text/javascript" src="static/CACHE/js/6f545c41089b.js"></script>
-<script type="text/javascript" src="static/CACHE/js/03f91b0f80d3.js"></script>  
-<script type="text/javascript" src="static/CACHE/js/bf7d663c3b26.js"></script>
- <!-- end if condition for home -->
+<script type="text/javascript" src="static/cache/lib/refactor.min.js"></script>
 
 <script type="text/javascript">
     if (window.location.hash && window.location.hash == '#_=_') {
