add navbar links to navigate page

--- a/type/index.html
+++ b/type/index.html
@@ -13,6 +13,7 @@
     <!--for responsiveness-->
     <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
     <style type="text/css">
+
     span2 {
         -ms-transform: rotate(20deg); /* IE 9 */
         -webkit-transform: rotate(20deg); /* Safari */
@@ -28,7 +29,9 @@
 <header>
 	<nav class="navbar navbar-light">
   <div class="container">
-    <div class="navbar-header">
+    <div class="navbar-header display-inline">
+        <a class="nav-link" href="../type/index.html">Explore Typing Lessons</a>
+        <a href="../learn/index.html"> Start Learning</a>
       
     </div>
   </div>
@@ -111,7 +114,7 @@
 
 
 
-	  <div  id="keyboard" class="" style="border-top:solid #efefef;">
+	  <div  id="keyboard" class="" style="border-top: solid 5px #efefef; margin-left: 10%;">
 		<ul class="ul-style">
 		<li class="key key-96  keyr-126 dual fin-1 dbackquote">~<br>`</li>
 		<li class="key key-49  keyr-33  dual fin-1 num1">!<br>1</li>
