make links open new tab

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <h1>Welcome to your Programming Learning Module</h1>
     <div>
-        <h3><a href="type/index.html">Explore Typing Lessons</a></h3>
-        <h3><a href="learn/index.html"> Start Learning</a></h3>
+        <h3><a target="_blank" href="type/index.html">Explore Typing Lessons</a></h3>
+        <h3><a target="_blank" href="learn/index.html"> Start Learning</a></h3>
     </div>
     
 </body>
