structure lesson for students up to slide 24

--- a/learn/index.html
+++ b/learn/index.html
@@ -24,19 +24,16 @@ function writeList(script) {
 	<h1>Instructions</h1>
 	<ul>
 		<li>Use the keyboard <strong>arrow keys</strong> to navigate. You can jump to a given slide by using Ctrl + G.</li>
-		<li>If the “Open in new tab” button doesn’t work, <strong>disable AdBlock</strong></li>
-		<li>These slides should work in Firefox, Safari, and Chrome but were taught using <strong>Chrome 64+</strong> and tested there more.</li>
-		<li>Some demos will not make sense as they were live coded, but there are <strong>notes</strong> on the top right or bottom left corner about what was explained during each slide.
-		These notes also have links to resources and additional information, so I highly recommend looking at them.</li>
+		<li>If you encounter any issues or something doesn’t work, <strong>Raise your hands or notify an Instructor</strong></li>
 	</ul>
 </article>
 
 <header id="intro" class="slide dont-resize" data-source="flickr.com/photos/billward/16601966117">
 	<h1>
-		An Introduction to Modern Web Technologies
-		<span class="note">for programmers & Computer Scientists</span>
+		An Introduction to Website Design 
+		<span class="note">for Students</span>
 	</h1>
-	<p class="attribution">By <a href="http://lea.verou.me">Lea Verou</a> (<a href="http://twitter.com/leaverou">@LeaVerou</a>)</p>
+	<p class="attribution">By <a href="http://andrewmiracle.com">Andrew Miracle</a> (<a href="http://twitter.com/koolamusic">@koolamusic</a>)</p>
 </header>
 
 <section id="html">
@@ -67,7 +64,7 @@ function writeList(script) {
 
 	<article class="slide syntax-breakdown" title="HTML tags">
 		<code class="code">
-			Hello <span title="Start em(phasis) tag" contentEditable>&lt;em></span><span title="Element content" data-index="1" contentEditable>world</span><span title="End tag" contentEditable>&lt;/em></span>!
+			Hello <span title="Start em(phasis) tag" contentEditable>&lt;em></span><span title="Element content" data-index="1" contentEditable>students</span><span title="End tag" contentEditable>&lt;/em></span>!
 		</code>
 		<a data-html="code" target="_blank" class="delayed">Open page in new tab</a>
 	</article>
@@ -175,7 +172,7 @@ function writeList(script) {
 
 	<article class="slide syntax-breakdown code" title="Attributes">
 		<code style="font-size: 180%;" class="code language-html">
-			Hello <br>&lt;a <span title="Attribute name">href</span>="<span title="Attribute value">http://ft.com/world</span>">&#x200b;world
+			Hello <br>&lt;a <span title="Attribute name">href</span>="<span title="Attribute value">http://google.com</span>">&#x200b;world
 			&lt;/a>
 		</code>
 		<a data-html="code" target="_blank" class="delayed">Open page in new tab</a>
@@ -206,11 +203,11 @@ function writeList(script) {
 	<article class="isolated demo horizontal slide" title="Links">
 		<div data-edit="contents">
 			<p>
-				<a href="http://haystack.csail.mit.edu">Haystack Group</a>
+				<a href="http://learnfactory.com.ng">Learnfactory</a>
 			</p>
 			<p>
 				<a href="https://w3.org/TR/html/textlevel-semantics.html#the-a-element">
-					&lt;a> element specification
+					element specification
 				</a>
 			</p>
 		</div>
@@ -554,6 +551,12 @@ function writeList(script) {
 				</li>
 			</ul>
 		</details>
+		
+		<aside class="small">
+			<a href="../type/index.html">Lets Practice some typing</a>
+		</aside>
+
+		
 	</article>
 
 	<article class="slide" data-import="input-element"></article>
